# yt-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  __main__.py  config.py  logger.py
bot/core/: queue.py  youtube.py
lib/config/: __init__.py
lib/logger/: __init__.py
lib/queue/: __init__.py
